@@ -1,6 +1,11 @@
 Version 2.2.0
 ~~~~~~~~~~~~~
 Post DiFX-2.1
+Support for IPv6 within C code.  Likely overall performance improvement at the same time
+  - python code, such as errormon, statemon, ..., are not yet converted.
+  - warning: all code linking to difxmessage that might use IPv6 should change
+    the size of from[] to DIFX_MESSAGE_MAX_INET_ADDRESS_LENGTH or face
+    possible segfaulting
 
 Version 2.1.0
 ~~~~~~~~~~~~
